# MotorControl

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/iview/motorcontrol/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/iview/motorcontrol/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/iview/motorcontrol/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mirromove/: CMakeLists.txt  build.gradle
mirromove/src/androidTest/java/com/iview/mirromove/: ExampleInstrumentedTest.java
mirromove/src/main/: AndroidManifest.xml
mirromove/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegPlayer.cpp  FFmpegPlayer.h  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  adev-android.cpp  adev-cmn.c  dxva2hwa.c  ffplayer.c  ffrender.c  macro.h  myqueue.h  native-lib.cpp  pktqueue.c  player_jni.cpp  safe_queue.h  snapshot.c  vdev-android.cpp  vdev-cmn.c
mirromove/src/main/java/com/iview/mirromove/: ControlService.java  ImagePriView.java  MainActivity.java  MirroApplication.java  MotorCallBack.java  MotorControlHelper.java  NetWorkListener.java  NetWorkService.java  PlayCallBack.java  SocketService.java
mirromove/src/main/java/com/iview/mirromove/data/: PathPlanning.java
mirromove/src/main/java/com/iview/mirromove/net/: HttpServerImpl.java
mirromove/src/main/java/com/iview/mirromove/util/: CommandListProvider.java  FileUtils.java  JSONParser.java  MediaFileUtil.java  MsgType.java
mirromove/src/main/java/com/iview/mirromove/view/: DensityUtils.java  RotateCircleImageView.java
mirromove/src/main/java/common/tool/ffmpegplayer/: NativePlayer.java
mirromove/src/main/java/pri/tool/nativeplayer/: NativePlayer.java
mirromove/src/main/res/layout/: activity_main.xml
mirromove/src/main/res/values/: attrs.xml  colors.xml  strings.xml
mirromove/src/test/java/com/iview/mirromove/: ExampleUnitTest.java
mirrorclient/: build.gradle
mirrorclient/src/androidTest/java/com/iview/mirrorclient/: ExampleInstrumentedTest.java
mirrorclient/src/main/: AndroidManifest.xml
mirrorclient/src/main/java/com/iview/mirrorclient/: MainActivity.java  NavController.java  TcpClient.java
mirrorclient/src/main/res/layout/: activity_main.xml
mirrorclient/src/main/res/values/: attrs.xml  strings.xml
mirrorclient/src/test/java/com/iview/mirrorclient/: ExampleUnitTest.java
stepmotor/: CMakeLists.txt  build.gradle
stepmotor/src/androidTest/java/com/iview/stepmotor/: ExampleInstrumentedTest.java
stepmotor/src/main/: AndroidManifest.xml
stepmotor/src/main/cpp/: dlp343x.c  horizontal_motor.c  motor_common.c  native_lib.cpp  step_motor.cpp  vertical_motor.c
stepmotor/src/main/cpp/include/: dlp343x.h  motor_common.h
stepmotor/src/main/java/com/iview/stepmotor/: MotorControl.java  MotorControlUnity.java
stepmotor/src/main/res/values/: strings.xml
stepmotor/src/test/java/com/iview/stepmotor/: ExampleUnitTest.java
